--- a/Index.html
+++ b/Index.html
@@ -6,7 +6,10 @@
         <title>Monkey D. Luffy</title>
     </head>
     <body>
-    
+        <h1> Monkey D. Luffy: The captain of the Straw Hat Pirates</h1>
+        <p> Monkey D. Luffy, commonly known as "Straw Hat Luffy" or simply "Straw Hat", is the founder, captain, and strongest combatant of the increasingly infamous and powerful Straw Hat Pirates.
+            He fearlessly pursues the legendary treasure of the late Gol D. Roger in order to become the new Pirate King and reach a further, untold dream (currently known to only his crew and closest friends).
+            He believes that being the Pirate King means having the most freedom in the world.</p>
     </body>
     <footer>
     Copyright Ben McCarthy 2024 (And Eiichiro Oda)
