--- a/Index.html
+++ b/Index.html
@@ -5,12 +5,47 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Monkey D. Luffy</title>
     </head>
-    <body>
-        <h1> Monkey D. Luffy: The captain of the Straw Hat Pirates</h1>
+        <body>
+        <header> <h1> Monkey D. Luffy: The captain of the Straw Hat Pirates </h1> </header>
+        
+        <img src="./Luffy1.jpg" alt="Monkey D. Luffy, holding his signiture strawhat" />
+
+        <header> <h2> An intorudction to Luffy </h2></header>
+
         <p> Monkey D. Luffy, commonly known as "Straw Hat Luffy" or simply "Straw Hat", is the founder, captain, and strongest combatant of the increasingly infamous and powerful Straw Hat Pirates.
             He fearlessly pursues the legendary treasure of the late Gol D. Roger in order to become the new Pirate King and reach a further, untold dream (currently known to only his crew and closest friends).
             He believes that being the Pirate King means having the most freedom in the world.</p>
-    </body>
+
+         <img src="./Monkey_D._Luffy_Anime_Post_Timeskip_Infobox.webp" alt="Monkey D. Luffy standing proud, despite suffering a major injury to his chest" />  
+         
+         <header> Attributes </header>
+         <ul>
+            <li>Adventurious Spirit</li>
+            <li>Carefree & Optimism</li>
+            <li>Fearlessness</li>
+            <li>Compassion</li>
+          </ul>
+
+          <header> Main Story Arcs </header>
+          <ol>
+             <li>East Blue Saga</li>
+             <li>Alabasta Saga</li>
+             <li>Sky Island Saga</li>
+             <li>Water 7 Saga</li>
+             <li>Thriller Back Saga</li>
+             <li>Summit War Saga</li>
+             <li>Fish-Man Island Saga</li>
+             <li>Dressrosa Saga</li>
+             <li>Whole Cake Island Saga</li>
+             <li>Wano Country Saga</li>
+             <li>Final Saga (Current)</li>
+           </ol>
+
+           <header> <h3> Currently, the Straw Hat Pirates find themselves on Eggland Island, the home of the mysterious Dr Vegapunk </h3></header>
+
+           <img src="./One Piece - Egghead 2.png" alt="The Straw Hat Pirates, who are currently on Egghead Island" />  
+
+        </body>
     <footer>
     Copyright Ben McCarthy 2024 (And Eiichiro Oda)
     </footer>
