Editing copyright dates

--- a/Index.html
+++ b/Index.html
@@ -47,6 +47,6 @@
 
         </body>
     <footer>
-    Copyright Ben McCarthy 2024 (And Eiichiro Oda)
+    Copyright Ben McCarthy, 2024 (And Eiichiro Oda, 1997)
     </footer>
 </html>
