--- a/Index.html
+++ b/Index.html
@@ -19,24 +19,24 @@
             <br>
             <br>
         
-        <header> <h2 id="intro"> An introduction to Luffy </h2></header>
+        <header> <h2 class="sub" id="intro"> An introduction to Luffy </h2></header>
 
-        <p> Monkey D. Luffy, commonly known as "Straw Hat Luffy" or simply "Straw Hat", is the founder, captain, and strongest combatant of the increasingly infamous and powerful Straw Hat Pirates.
+        <p class="info"> Monkey D. Luffy, commonly known as "Straw Hat Luffy" or simply "Straw Hat", is the founder, captain, and strongest combatant of the increasingly infamous and powerful Straw Hat Pirates.
             He fearlessly pursues the legendary treasure of the late Gol D. Roger in order to become the new Pirate King and reach a further, untold dream (currently known to only his crew and closest friends).
             He believes that being the Pirate King means having the most freedom in the world.</p>
 
-         <img src="./Monkey_D._Luffy_Anime_Post_Timeskip_Infobox.webp" alt="Monkey D. Luffy standing proud, despite suffering a major injury to his chest" /> 
+         <img class="pic1"src="./Monkey_D._Luffy_Anime_Post_Timeskip_Infobox.webp" alt="Monkey D. Luffy standing proud, despite suffering a major injury to his chest" /> 
          
-         <header id="Attributes"> Attributes </header>
-         <ul>
+         <header class="sub" id="Attributes"> Attributes </header>
+         <ul class="info">
             <li>Adventurious Spirit</li>
             <li>Carefree & Optimism</li>
             <li>Fearlessness</li>
             <li>Compassion</li>
           </ul>
 
-          <header id="Arcs"> Main Story Arcs </header>
-          <ol>
+          <header class="sub"id="Arcs"> Main Story Arcs </header>
+          <ol class="info">
              <li>East Blue Saga</li>
              <li>Alabasta Saga</li>
              <li>Sky Island Saga</li>
@@ -52,14 +52,17 @@
 
            <header> <h3> Currently, the Straw Hat Pirates find themselves on Eggland Island, the home of the mysterious Dr Vegapunk </h3></header>
 
-           <img src="./One Piece - Egghead 2.png" alt="The Straw Hat Pirates, who are currently on Egghead Island" />  
-
+           <img class="pic2"src="./One Piece - Egghead 2.png" alt="The Straw Hat Pirates, who are currently on Egghead Island" />  
+            <br>
+            <br>
            <a target="_self" href="https://onepiece.fandom.com/wiki/Monkey_D._Luffy" >Read more here (in this tab)</a>
-
+           <br>
+           <br>
            <a target="_blank" href="https://onepiece.fandom.com/wiki/Monkey_D._Luffy" >Read more here (in a new tab)</a>
-
         </body>
     <footer>
+        <br>
+        <br>
     Copyright Ben McCarthy, 2024 (And Eiichiro Oda, 1997)
     </footer>
 </html>
